# grs-interpreter

./: .gitignore  CMakeLists.txt  README.md  index.html
examples/ecrt_control/: CMakeLists.txt
examples/ecrt_control/.cache/clangd/index/: client.cpp.3AA9C2EC20B6DD7F.idx  protocol.hpp.B65FEE37466DFBFA.idx
examples/ecrt_control/common/: protocol.hpp
examples/ecrt_control/src/: client.cpp
examples/multiprocess/: CMakeLists.txt
examples/multiprocess/include/multiprocess/: shared_mem.hpp
examples/multiprocess/src/: gui_process.cpp  rt_process.cpp
examples/regex/src/: catch.cpp
examples/rt_examples/io_control/: CMakeLists.txt
examples/rt_examples/io_control/include/io_control/: bit_set.hpp
examples/rt_examples/io_control/src/: io_log.cpp  led_blink.cpp
examples/rt_examples/servo_motor_control/: CMakeLists.txt
examples/rt_examples/servo_motor_control/src/: main.cpp
examples/rt_interpreter/common/: bitset.hpp  protocol.hpp  spsc_queue.hpp
examples/rt_interpreter/pc_ecrt/: CMakeLists.txt
examples/rt_interpreter/pc_ecrt/include/pc_ecrt/: network_server.hpp  rt_loop.hpp
examples/rt_interpreter/pc_ecrt/src/: main.cpp  network_server.cpp  rt_loop.cpp
grs_interpreter/: CMakeLists.txt
grs_interpreter/.cache/clangd/index/: ast.cpp.4BE8F6FA2384C2AC.idx  ast.hpp.0FA2F47229332DF2.idx  executor.cpp.85F5934E1127539F.idx  executor.hpp.5F73BF5572ECB4C3.idx  instruction_generator.cpp.A9611EBDAA314697.idx  instruction_generator.hpp.A8F5C49EEBA686E0.idx  io_provider.cpp.17137E56133EEAE9.idx  io_provider.hpp.435DB38C8BFEA2E3.idx  lexer.cpp.0A78600FA85C726A.idx  lexer.hpp.B7BC3056EC7E1758.idx  main.cpp.E12A510137E9C16A.idx  parser.cpp.58F156EE207ED4AB.idx  parser.hpp.AA1743B021DD199D.idx  state_machine.cpp.207519D0261CFC20.idx  state_machine.hpp.B463B063507AC908.idx  step_executor.cpp.A905AA500C3BE7BD.idx  step_executor.hpp.4ED3B8D1BE3CDFCF.idx  step_main.cpp.AEDE7577DA5A5EE5.idx  token.cpp.B1CECDEE8CE6081D.idx  token.hpp.B7461AAC364F87C0.idx  utils.hpp.B0C7EA7AB87A8C8D.idx  visitor.hpp.0FBD5B4848239248.idx
grs_interpreter/include/ast/: ast.hpp  visitor.hpp
grs_interpreter/include/common/: utils.hpp
grs_interpreter/include/executor/: executor.hpp  state_machine.hpp  step_executor.hpp
grs_interpreter/include/interpreter/: instruction_generator.hpp  instruction_set.hpp
grs_interpreter/include/io/: io_provider.hpp  tcp_io_provider.hpp
grs_interpreter/include/lexer/: lexer.hpp  token.hpp
grs_interpreter/include/parser/: parser.hpp
grs_interpreter/src/: main.cpp  step_main.cpp
grs_interpreter/src/ast/: ast.cpp
grs_interpreter/src/executor/: executor.cpp  state_machine.cpp  step_executor.cpp
grs_interpreter/src/interpreter/: instruction_generator.cpp  instruction_set.cpp
grs_interpreter/src/io/: io_provider.cpp  tcp_io_provider.cpp
grs_interpreter/src/lexer/: lexer.cpp  token.cpp
grs_interpreter/src/parser/: parser.cpp
grs_interpreter/tests/: assign_and_type_convertion_test.txt  command_types_test.txt  example_krl_code.txt  executor_test.txt  general_system_test.txt  if_else_wait_test.txt  io_hardware_test.grs  parser_test.txt  pos_type_convertion.txt  test_interpreter.cpp
ide/: OVERVIEW.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  config.ini  install.bat  install.sh  sample.grs
ide/scintilla/: grs-language.xml  grs.properties
ide/zerobrane/: grs-support.lua  grs.api  grs.lua  grs_interpreter.lua
krl_interpreter/: CMakeLists.txt
krl_interpreter/include/ast/: ast.hpp  visitor.hpp
krl_interpreter/include/common/: utils.hpp
krl_interpreter/include/interpreter/: grass_motion_adapter.hpp  instruction_executor.hpp  instruction_set.hpp  motion_controller.hpp  state_machine.hpp  virtual_memory.hpp
krl_interpreter/include/lexer/: lexer.hpp  token.hpp
krl_interpreter/include/parser/: parser.hpp
krl_interpreter/src/: main.cpp
krl_interpreter/src/ast/: ast.cpp
krl_interpreter/src/interpreter/: grass_motion_adapter.cpp  instruction_executor.cpp  instruction_set.cpp  motion_controller.cpp  state_machine.cpp  virtual_memory.cpp
krl_interpreter/src/lexer/: lexer.cpp  token.cpp
krl_interpreter/src/parser/: parser.cpp
krl_interpreter/tests/: command_types_test.txt  example_krl_code.txt  krl.txt  test_interpreter.cpp
krl_interpreter_own/: CMakeLists.txt
krl_interpreter_own/include/lexer/: lexer.hpp  token.hpp
krl_interpreter_own/src/: main.cpp
krl_interpreter_own/src/lexer/: lexer.cpp  token.cpp
krl_interpreter_own/tests/: test_lexer.cpp
regex/: CMakeLists.txt
regex/files/: text.txt
regex/src/: multi_catch.cpp
